--- a/src/index.html
+++ b/src/index.html
@@ -845,6 +845,6 @@
     </footer>
 
     <script type="module" src="./main.js"></script>
-    <script src="./js.js"></script>
+    <script type="application/javascript" src="js.js"></script>
   </body>
 </html>
